# tsu-cli

./: .coverage  .gitignore  LICENSE  README.md  plan.md  pyproject.toml  use-cases.md
src/: __init__.py  auth.py  config.py  confluence_utils.py  diff.py  generator.py  help.md  main.py  publisher.py
src/prompts/: __init__.py  diff.md  generate-api_spec.md  generate-func_spec.md  generate-security_spec.md  generate.md  system.md
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_confluence_utils.py  test_diff.py  test_generator.py  test_publisher.py
